# bot-ea

./: .gitignore  README.md  pyproject.toml
config/: parameter-map.md
data/: README.md
docs/: allocation-guidance.md  candlestick-patterns-assessment.md  codex-polling-runtime.md  decision-tree-pseudorules.md  desktop-runtime-runbook.md  ea-bot-blueprint.md  ea-brain-vs-config.md  live-mt5-python-integration-notes.md  mt5-adapter-boundary.md  mt5-validation-protocol.md  progress-summary.md  project-handoff.md  resume-prompt.md  risk-engine-spec.md  session-breakout-v1.md  session-memory-export.md  sqlite-runtime-schema.md  strategy-candidates.md  trading-foundation-and-tuning.md  user-manual.md  validation-harness-spec.md  windows-packaging-plan.md
research/: 2026-04-20-market-and-platform-research.md  2026-04-20-stage-2-deep-research.md  2026-04-20-stage-3-decision-tree-and-candlestick-research.md  2026-04-20-stage-4-implementation-and-live-research-notes.md  2026-04-20-stage-5-subagent-integration-notes.md
scripts/: run-desktop-gui.ps1  run-qt-gui.ps1  run-websocket-service.ps1
src/bot_ea/: __init__.py  codex_cli_engine.py  decision_tree.py  desktop_runtime.py  entrypoints.py  gui_app.py  (+14 more)
tests/: test_codex_cli_engine.py  test_desktop_runtime.py  test_entrypoints.py  test_gui_app.py  test_mock_mt5_adapter.py  test_mt5_execution_runtime.py  test_mt5_snapshots.py  test_operator_state.py  test_polling_runtime.py  test_qt_app.py  test_risk_engine.py  test_runtime_store.py  test_session_breakout.py  test_stop_policy.py  test_validation.py  test_websocket_service.py
(+2 files in other folders)
