[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-ea"
version = "0.1.0"
description = "Research-first MT5 trading bot scaffold with risk-first design."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "websockets>=12",
]

[project.scripts]
bot-ea-qt = "bot_ea.entrypoints:qt_main"
bot-ea-websocket = "bot_ea.entrypoints:websocket_main"

[project.optional-dependencies]
live = [
  "MetaTrader5>=5.0.29",
]
desktop = [
  "PySide6>=6.7",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bot_ea*"]
